# metroid

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  environment.yaml  environment.yml  pyproject.toml
.claude/agents/: technical-writer.md
assets/: README.md
python/metroid/: __init__.py  cameras.py  component.py  observatory.py  orbital_object.py  orbital_objects.py  pupils.py
python/metroid/leosim_archive/: orbital_object.py
python/metroid/plugins/: phot_utils.py
python/metroid/utils/: validation.py
src/metroid/: CLAUDE.md  README.md  __init__.py  bandpass.py  camera.py  cameras.py  observatory.py  orbital_objects.py  pupils.py  sed.py
src/metroid/photometry/: CLAUDE.md  README.md  __init__.py  bandpass.py  conversions.py  photo_params.py  sed.py  throughput.py
src/metroid/plugins/: __init__.py  discovery.py  providers.py  registry.py  rubin.py
src/metroid/profiles/: CLAUDE.md  README.md  __init__.py  orbital_objects.py  pupils.py
src/metroid/utils/: CLAUDE.md  README.md  decorators.py  photometry.py  protocols.py  (+2 more)
tests/: test_bandpass.py  test_camera.py  test_observatory.py  test_orbital_objects.py  test_plugins_discovery.py  test_plugins_registry.py  test_plugins_rubin.py  test_pupils.py  test_sed.py  test_validation_utils.py
tests/photometry/: test_bandpass.py  test_conversions.py  test_sed.py  test_throughput.py
tests/plugins/: test_discovery.py  test_providers.py  test_registry.py  test_rubin.py
tests/profiles/: test_orbital_objects.py  test_pupils.py
tests/utils/: test_decorators.py  test_quantities.py  test_validation.py
