[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "metroid"
version = "0.1.0"
description = "Modeling Earth-orbiting Trails, Reflective Objects, and Intrusive Debris"
authors = [{ name = "Adam Snyder" }]
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "astropy",
    "galsim",
]

[project.optional-dependencies]
dev = ["black", "pytest"]
rubin = ["rubin-sim"]

[project.entry-points."metroid.bandpass"]
rubin = "metroid.plugins.rubin:RubinBandpassLoader"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 110
target-version = ["py313"]
